Sandboxing mods now partially works, however code executed in callbacks is still unsafe.