@@ -36,6 +36,15 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<reuseForks>false</reuseForks>
+					<argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -69,12 +78,6 @@
 			<groupId>net.zomis</groupId>
 			<artifactId>scorers</artifactId>
 			<version>0.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		  <groupId>com.github.stefanbirkner</groupId>
-		  <artifactId>system-rules</artifactId>
-		  <version>1.7.0</version>
-		  <scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
